src/main/java/com/example/resy/data/error/ReservationAlreadyExistsException.java
package com.example.resy.data.error;

public class ReservationAlreadyExistsException extends RuntimeException {
    public ReservationAlreadyExistsException(String message) {
        super(message);
    }
}
